[project]
name = "renoteai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "passlib[bcrypt]>=1.7.4",
    "pypdf>=6.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
